add skill manager